- /UI/VCAEngine, /UI/Vision, /UI/WebVision: Remove individual font attributes from primitives "Text".
- FIX:/UI/Vision: Not full value attribute copy is fixed in process of element view change of primitive "FormEl" of type "Line edit".
- FIX:/UI/VCAEngine: Page's self attributes load is fixed.
- FIX:/UI/Vision: Dublicates of values into buffer process is fixed for primitive "Diagram".
- FIX:/UI/WebVision: Dublicates of values into buffer process is fixed for primitive "Diagram".
- FIX:/UI/WebVision: Trend begin is fixed for primitive "Diagram".
- FIX:/UI/WebVision: More line text visible and arguments padding is fixed for primitive "Text".
- !!:/UI/WebVision: Content scaling support is added.


2008-03-06 Maxim
- /UI/VCAEngine: Double point's attributes is made for primitive "ElFigure".
- !!!:/UI/VCAEngine, UI/Vision, UI/WebVision: Fill mechanizm is changed, for Web and QT unification.
- !!!:/UI/WebVision: First support of primirive "ElFigure" is added.


2008-03-06 Roman
- !!!!:/SYS, /DAQ/JavaLikeCalc, /UI/VCAEngine, /UI/Vision: Error value (EVAL) support is added to: Function process frame, JavaLikeCalc interpreter 
    and VCA components.
- !!:/DAQ/LogicLev: No resolved and errors links' values is inited by EVAL.
- FIX:/Special/FLibSYS: The result type of function varhGetB() is fixed.
- FIX:/UI/VCAEngine: User's attributes load, for container widgets, is fixed.
- FIX:/UI/VCAEngine: Preparing IO for widget's calc function is fixed. Focus attribute include from all active included widgets.
- FIX:/UI/VCAEngine: Included containers order is changed to: included widgets, attributes, pages.
- /UI/VCAEngine: New created attributes is made inited by EVAL. After attribute's identifier or type changing is made value copy.
- !!:/UI/VCAEngine: Individual value types sypport is added to Element "Text" of primitive "FormEl" for various view.
- FIX:/UI/Vision: The master page open procedure is rewrited.