@@ -408,7 +408,6 @@ RunPageView *RunPageView::pgOpen( const string &ipg )
     pg->load("");
     pg->moveF(QPointF(mapToGlobal(pos()).x()+sizeF().width()/2-pg->sizeF().width()/2,
     	     mapToGlobal(pos()).y()+sizeF().height()/2-pg->sizeF().height()/2));
-    pg->show( );
     
     return pg;
 }
